Add file operations
Signed-off-by: Yaxing Guo <guoyaxing@bosc.ac.cn>

--- a/fs/Makefile
+++ b/fs/Makefile
@@ -1,2 +1,3 @@
-obj-$(CONFIG_ENABLE_FS) += fs.o
+obj-$(CONFIG_ENABLE_FS) += fs.o file.o
+obj-$(CONFIG_ENABLE_INIT_FS) += init_fs.o
 obj-$(CONFIG_ENABLE_FS) += ext4/
